# --cmx-diary-20260716

./: .env.example  .env.production.example  .gitignore  AGENTS.md  AI_HANDOFF.md  CHANGELOG.md  PROJECT.md  README.md  autostart-run.ps1  backup.ps1  change-access-domain.ps1  compose.yml  install-autostart.ps1  setup.ps1  start.ps1  status.ps1  stop.ps1  test-autostart.ps1
.github/workflows/: cmx-mcp-tests.yml
cmx-mcp/: .env.example  README.md  pyproject.toml
cmx-mcp/src/cmx_mcp/: __init__.py  compact.py  config.py  security.py
docs/: ARCHITECTURE.md  CLAUDE_REVIEW.md  CLOUDFLARE.md  CMX_MCP_REMOTE_SOCIAL_PLAN.md  CMX_MCP_SMALL_INSTANCE_DESIGN.md  DEPLOYMENT.md  MUTABLE_WEB_DOMAIN_RFC.md  MVP_SCOPE.md  RESTORE.md
mcp/: .gitignore  README.md  add-bot.ps1  authorize-bot.ps1  http-disable.ps1  http-enable.ps1  http-start.ps1  http-status.ps1  http-stop.ps1  install.ps1  pyproject.toml  setup-ai.ps1  smoke.ps1
mcp/src/cmx_mcp/: authorize.py  cli.py  compact.py  config.py  db.py  extensions.py  mastodon_client.py  remote.py  remote_auth.py  scope.py  secrets.py  server.py  smoke.py
mcp/tests/: test_compact.py  test_config.py  test_db.py  test_phase_a.py  test_remote_auth.py
nginx/: default.conf
prompts/: project-doc-sync.md
prototypes/: cmx-settings-ai-residents.html
skills/project-doc-sync/: SKILL.md
