[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmx-mcp"
version = "0.1.0"
description = "Small-instance local STDIO MCP adapter for CMX AI residents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "mcp>=1,<2",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.scripts]
cmx-mcp = "cmx_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
